# test_econ_project_templates

./: CHANGES.md  CITATION  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: task_paper.py  test_econ_project_templates.tex  test_econ_project_templates_pres.tex
src/test_econ_project_templates/: __init__.py
src/test_econ_project_templates/analysis/: task_analysis.py
src/test_econ_project_templates/data_management/: __init__.py  task_data_management.py
src/test_econ_project_templates/final/: __init__.py  task_final.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_clean_data.py
