[metadata]
name = test_econ_project_templates
description = Test Econ Project Templates
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NicolasRoever/test_econ_project_templates
author = Nicolas Roever
author_email = nicolas.roever@wiso.uni-koeln.de
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/NicolasRoever/test_econ_project_templates
    Documentation = https://github.com/NicolasRoever/test_econ_project_templates
    Github = https://github.com/NicolasRoever/test_econ_project_templates
    Tracker = https://github.com/NicolasRoever/test_econ_project_templates/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/test_econ_project_templates/_version.py
